# pdf-word-count

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
tests/: integration.rs
